# flysquid

Flysquid/: AUTHORS  ChangeLog  Flysquid.gladep  Flysquid.prj  Flysquid.pws  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.status  configure  configure.in  cvs.sh  libtool  resume.doc
Flysquid/autom4te.cache/: output.0  traces.0
Flysquid/doc/: RFC-Flysquid.doc  define.txt  project-plan.txt
Flysquid/po/: Makefile  Makefile.in  POTFILES
Flysquid/src/: Makefile  Makefile.am  Makefile.in  cfg.c  cfg.h  cvsroot.sh  error.txt  error3.txt  flysquid  flysquid.c  main  main.c  sample.cfg  simpleproxy.c  uiflysquid.c
Flysquid/src/.deps/: flysquid.P  main.P  main.pp
Flysquid/src/gtk/: simpleproxy-gtk.c
